--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.1",
+    "react-uuid": "^1.0.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
